# znappr

./: .gitignore  Cargo.toml  Makefile  README.md  znappr-generic-server.json  znappr-hypervisor.json  znappr-nas.json  znappr-workstation.json
src/: main.rs
